recursion.cons.alldifferent.AllDifferent.scala.error
Erreur de compilation :
AllDifferent:4: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    l match {
    ^AllDifferent:10: error: ':' expected but ')' found.
  def aux(l) {
           ^AllDifferent:17: error: identifier expected but '}' found.
}
^